--- a/Weather/styles.css
+++ b/Weather/styles.css
@@ -3,6 +3,7 @@ body {
     background: linear-gradient(90deg, #1a3f69,#5076a1,#1a3f69);
     font-family: 'Roboto', sans-serif;
 }
+
 #outer {
     width: 626px;
     height: 466px;
@@ -283,6 +284,7 @@ nav > a + a {
     border: none;
     cursor: pointer;
     -webkit-appearance: none;
+    color: rgba(255, 255, 255, 0.45);
 }
 @media screen and (max-width: 480px) {
   #outer {
