--- a/Weather/styles.css
+++ b/Weather/styles.css
@@ -278,13 +278,13 @@ nav > a + a {
 }
 
 #magnifierBtn {
+    -webkit-appearance: none;
     position: absolute;
     right: 5px;
     top: 9px;
     border: none;
     cursor: pointer;
-    -webkit-appearance: none;
-    color: rgba(255, 255, 255, 0.45);
+    color: red;
 }
 @media screen and (max-width: 480px) {
   #outer {
