--- a/style.css
+++ b/style.css
@@ -1,153 +1,169 @@
 body {
-    background-color: rgb(245, 245, 245);
+  background-color: rgb(245, 245, 245);
 }
 
 h3 {
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 100;
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 100;
 }
 
 input {
-    padding: 0;
-    width: 460px;
-    height: 45px;
-    box-sizing: border-box;
-    margin: 0 auto;
-    display: block;
-    border-radius: 5px;
-    border: 1px solid gray;
+  padding: 0;
+  width: 460px;
+  height: 45px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  display: block;
+  border-radius: 5px;
+  border: 1px solid gray;
 }
 
 input[placeholder] {
-    font-size: larger;
-    padding-left: 2%;
-    
+  font-size: larger;
+  padding-left: 2%;
 }
 
 .main {
-    min-height: 688px;
-    width: 476px;
-    border: 1px solid black;
-    background-color: white;
-    border-radius: 5px;
-    margin: 0 auto;
-    box-sizing: border-box;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  min-height: 688px;
+  width: 476px;
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 5px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 #divTaskerLow {
-    position: relative;
-    margin-bottom: 13px;
+  position: relative;
+  margin-bottom: 13px;
 }
 
 .plusLow {
-    position: absolute;
-    right: 30px;
-    bottom: 10px; 
-    background-color: white;
-    color: lightgray;
-    font-size: xx-large;
-    padding: 0;
-    border: none;
-    cursor: pointer;
-    line-height: 0.75;
+  position: absolute;
+  right: 30px;
+  bottom: 10px;
+  background-color: white;
+  color: lightgray;
+  font-size: xx-large;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  line-height: 0.75;
 }
 
 .plusLow:hover {
-        color: gray;
+  color: gray;
 }
 
 .plusLow:active {
-    bottom: 5px;
+  bottom: 5px;
 }
 
 .plusHigh {
-    position: absolute;
-    right: 30px;
-    background-color: white;
-    border: none;
-    color: lightgray;
-    font-size: xx-large;
-    padding: 0;    
-    bottom: 10px;
-    cursor: pointer;
-    line-height: 0.75;
-
+  position: absolute;
+  right: 30px;
+  background-color: white;
+  border: none;
+  color: lightgray;
+  font-size: xx-large;
+  padding: 0;
+  bottom: 10px;
+  cursor: pointer;
+  line-height: 0.75;
 }
 
 .plusHigh:hover {
-    color: gray;
+  color: gray;
 }
 
 .plusHigh:active {
-    bottom: 5px;
+  bottom: 5px;
 }
 
 .crest {
-    border: none;
-    display: inline-block;
-    position: absolute;
-    background-color: rgba(245, 245, 245, 0);
-    color: lightgray;
-    font-size:larger;
-    right: 25px;
-    padding: 0;
-    bottom: 10px;
-    cursor: pointer;
+  border: none;
+  display: inline-block;
+  position: absolute;
+  background-color: rgba(245, 245, 245, 0);
+  color: lightgray;
+  font-size: larger;
+  right: 25px;
+  padding: 0;
+  bottom: 10px;
+  cursor: pointer;
 }
 
 .crest:hover {
-    color: gray;
+  color: gray;
 }
 
 .crest:active {
-    bottom: 17px;
+  bottom: 17px;
 }
 
 #divTaskerHigh {
-    position: relative;
-    margin-bottom: 13px;
+  position: relative;
+  margin-bottom: 13px;
 }
 
 .task {
-    border: 1px solid gray;
-    width: 460px;
-    box-sizing: border-box;
-    margin: 8px auto;
-    border-radius: 5px;
-    min-height: 45px;
-    padding: 0;
-    position: relative;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
+  border: 1px solid gray;
+  width: 460px;
+  box-sizing: border-box;
+  margin: 8px auto;
+  border-radius: 5px;
+  min-height: 45px;
+  padding: 0;
+  position: relative;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .taskText {
-    margin-left: 45px;
-    margin-top: 10px;
-    display: inline-block;
-    position: absolute;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 21px;
+  margin-left: 45px;
+  margin-top: 10px;
+  display: inline-block;
+  position: absolute;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21px;
 }
 
 .taskDoneRadio {
-    position: absolute;
-    left: 11px;
-    top: 25%;
-    padding: 0;
-    height: 23px;
-    width: 23px;
-    border: none;
-    display: inline-block;
+  position: absolute;
+  left: 11px;
+  top: 25%;
+  padding: 0;
+  height: 23px;
+  width: 23px;
+  border: none;
+  display: inline-block;
 }
 
 .taskDoneRadio:active {
-    background-color:gray;
+  background-color: gray;
 }
 
 .taskDone {
-    opacity: 0.35;
-    background-color: rgb(250, 229, 182);
+  opacity: 0.35;
+  background-color: rgb(250, 229, 182);
+}
+
+@media screen and (max-width: 480px) {
+  body {
+    margin: auto;
+    padding: 0;
+    width: 96vw;
+  }
+
+  .main {
+    margin-top: 4px;
+    width: 96vw;
+    padding: 0;
+  }
+
+  input {
+    width: 93vw;
+  }
 }
